change about me

--- a/index.html
+++ b/index.html
@@ -63,10 +63,17 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quibusdam assumenda porro maiores cumque ipsam voluptas vel autem tenetur est?</p>
+            <p>
+              With a solid foundation as a Computer Engineering graduate, I am passionately committed to advancing my expertise and gaining hands-on experience in the ever-evolving field of Information Technology, with a particular focus on
+              Data Analysis and Data Science. Recognized as a dedicated and proactive professional, I thrive in dynamic, collaborative, and diverse environments where innovation and problem-solving are at the forefront.
+            </p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perferendis vitae veritatis neque, impedit fugit iure a reprehenderit dolore deleniti necessitatibus natus, ducimus cumque aliquam?</p>
+            <p>
+              My strong technical proficiency spans across programming, data analysis, and the application of machine learning techniques, enabling me to contribute effectively to data-driven decision-making and the development of
+              intelligent systems. Eager to continuously learn and grow, I am driven by a deep curiosity to uncover insights from data and leverage cutting-edge technologies to create impactful solutions that address complex challenges in
+              today’s digital landscape.
+            </p>
           </div>
         </div>
       </div>
